# rover_science_copy1

./: README.md  package.xml
MAX6675-master/MAX6675.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/: local_setup.sh  setup.sh
install/rover_science/lib/rover_science/: rover_carbon_sensor_driver  rover_dynamixel_driver  rover_temp_and_humidity_drivers  rover_vesc_driver
install/rover_science/share/rover_science/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_science/share/rover_science/launch/: all_drivers.launch.py
launch/: all_drivers.launch.py
rover_science/: base_motor_control_gui.py  base_sensor_gui.py  data_logger.py  gpio_switch_driver.py  pwn_motor_driver.py  rover_carbon_sensor_driver.py  rover_dynamixel_driver.py  rover_vesc_driver.py  temp_humd_driver.py
temp/: rover_temprobe_drivers.py  temp.ino
